--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h1>Mon super site</h1>
 
         <button class="btn">Ceci est un bouton</button>
+        <button class="btn btn-danger">Ceci est un bouton de danger</button>
 </body>
 </html>
